# Klaude-cl

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: web_ui_usage.md
docs/examples/multi-agent/: 2024-world-aquatics-championships-doha.md  2025-world-aquatics-championships-comprehensive-guide.md  swimming-championships.html
docs/sub-agents/: frontend-page-designer.md  research-integration-specialist.md
scripts/: extract_content.py  mitm_llm_proxy.py
src/claude_code_cli/: agent.py  main.py
src/klaude/: agent.py  agent_config.py  main.py  tool_base.py  tools.py  tools_impl.py  websocket_server.py
src/klaude/static/: app.js  index.html  styles.css
tests/: README.md  conftest.py  expected_tool_schemas.json  extract_tool_schemas.py  test_agent_config.py  test_all_tools.py  test_bash_tool.py  test_edit_tool.py  test_glob_tool.py  test_grep_tool.py  test_helpers.py  test_ls_tool.py  test_multiedit_tool.py  test_notebook_tools.py  test_read_tool.py  test_task_tool.py  test_todowrite_tool.py  test_tool_schemas.py  test_tools_impl.py  test_webfetch_tool.py  test_websearch_tool.py  test_write_tool.py  update_schema_tests.py
tests/test_samples/: sample.py  sample_notebook.ipynb  test_import.py
tests/test_samples/subdir/: nested.py
