[project]
name = "claude-code-cli"
version = "0.1.0"
description = "A CLI agent similar to Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "dotenv>=0.9.9",
]

[project.scripts]
cc = "claude_code_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
