[project]
name = "klaude"
version = "0.1.0"
description = "A CLI agent similar to Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "dotenv>=0.9.9",
    "requests>=2.32.4",
    "markdownify>=1.1.0",
    "aiohttp",
]

[project.scripts]
klaude = "klaude.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
